--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -201,16 +201,33 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704081649225_s2.cs" />
-    <Compile Include="Migrations\201704081649225_s2.Designer.cs">
-      <DependentUpon>201704081649225_s2.cs</DependentUpon>
+    <Compile Include="Migrations\201704081849090_h4.cs" />
+    <Compile Include="Migrations\201704081849090_h4.Designer.cs">
+      <DependentUpon>201704081849090_h4.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081855375_h5.cs" />
+    <Compile Include="Migrations\201704081855375_h5.Designer.cs">
+      <DependentUpon>201704081855375_h5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081856509_h6.cs" />
+    <Compile Include="Migrations\201704081856509_h6.Designer.cs">
+      <DependentUpon>201704081856509_h6.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201704081929538_h7.cs" />
+    <Compile Include="Migrations\201704081929538_h7.Designer.cs">
+      <DependentUpon>201704081929538_h7.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Instructors.cs" />
+    <Compile Include="Models\QuestionAnswers.cs" />
+    <Compile Include="Models\Courses.cs" />
+    <Compile Include="Models\Departments.cs" />
+    <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Exam.cs" />
+    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Qualifications.cs" />
+    <Compile Include="Models\Questions.cs" />
     <Compile Include="Models\Student.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -286,8 +303,17 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704081649225_s2.resx">
-      <DependentUpon>201704081649225_s2.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704081849090_h4.resx">
+      <DependentUpon>201704081849090_h4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081855375_h5.resx">
+      <DependentUpon>201704081855375_h5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081856509_h6.resx">
+      <DependentUpon>201704081856509_h6.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704081929538_h7.resx">
+      <DependentUpon>201704081929538_h7.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
