--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -221,6 +221,10 @@
     <Compile Include="Migrations\201704082004223_h8.Designer.cs">
       <DependentUpon>201704082004223_h8.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201704082010020_h9.cs" />
+    <Compile Include="Migrations\201704082010020_h9.Designer.cs">
+      <DependentUpon>201704082010020_h9.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Instructors.cs" />
     <Compile Include="Models\QuestionAnswers.cs" />
@@ -321,6 +325,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201704082004223_h8.resx">
       <DependentUpon>201704082004223_h8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201704082010020_h9.resx">
+      <DependentUpon>201704082010020_h9.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
