--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -201,11 +201,14 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704101443172_h1.cs" />
-    <Compile Include="Migrations\201704101443172_h1.Designer.cs">
-      <DependentUpon>201704101443172_h1.cs</DependentUpon>
+    <Compile Include="Migrations\201704112113284_h1.cs" />
+    <Compile Include="Migrations\201704112113284_h1.Designer.cs">
+      <DependentUpon>201704112113284_h1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\Attendance.cs" />
+    <Compile Include="Models\Course_Student_Exam.cs" />
+    <Compile Include="Models\Course_Student_Instructor.cs" />
     <Compile Include="Models\Instructors.cs" />
     <Compile Include="Models\Instructor_Corse_InDepartment.cs" />
     <Compile Include="Models\QuestionAnswers.cs" />
@@ -218,6 +221,7 @@
     <Compile Include="Models\Qualifications.cs" />
     <Compile Include="Models\Questions.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\Vacations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -292,8 +296,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704101443172_h1.resx">
-      <DependentUpon>201704101443172_h1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704112113284_h1.resx">
+      <DependentUpon>201704112113284_h1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
