--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -201,9 +201,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704112137478_h1.cs" />
-    <Compile Include="Migrations\201704112137478_h1.Designer.cs">
-      <DependentUpon>201704112137478_h1.cs</DependentUpon>
+    <Compile Include="Migrations\201704112358372_h1.cs" />
+    <Compile Include="Migrations\201704112358372_h1.Designer.cs">
+      <DependentUpon>201704112358372_h1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Attendance.cs" />
@@ -221,6 +221,7 @@
     <Compile Include="Models\Qualifications.cs" />
     <Compile Include="Models\Questions.cs" />
     <Compile Include="Models\Student.cs" />
+    <Compile Include="Models\StudentViewModel.cs" />
     <Compile Include="Models\Vacations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -296,8 +297,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704112137478_h1.resx">
-      <DependentUpon>201704112137478_h1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704112358372_h1.resx">
+      <DependentUpon>201704112358372_h1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
