--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -198,16 +198,17 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704112358372_h1.cs" />
-    <Compile Include="Migrations\201704112358372_h1.Designer.cs">
-      <DependentUpon>201704112358372_h1.cs</DependentUpon>
+    <Compile Include="Migrations\201704140750007_h1.cs" />
+    <Compile Include="Migrations\201704140750007_h1.Designer.cs">
+      <DependentUpon>201704140750007_h1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Attendance.cs" />
-    <Compile Include="Models\Course_Student_Exam.cs" />
+    <Compile Include="Models\Student_Exam.cs" />
     <Compile Include="Models\Course_Student_Instructor.cs" />
     <Compile Include="Models\Instructors.cs" />
     <Compile Include="Models\Instructor_Corse_InDepartment.cs" />
@@ -221,7 +222,7 @@
     <Compile Include="Models\Qualifications.cs" />
     <Compile Include="Models\Questions.cs" />
     <Compile Include="Models\Student.cs" />
-    <Compile Include="Models\StudentViewModel.cs" />
+    <Compile Include="Models\JoinViewModel.cs" />
     <Compile Include="Models\Vacations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -284,6 +285,7 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Students\Profil.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -297,8 +299,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704112358372_h1.resx">
-      <DependentUpon>201704112358372_h1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704140750007_h1.resx">
+      <DependentUpon>201704140750007_h1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
