--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -292,6 +292,8 @@
     <Content Include="Views\Students\UserProfile.cshtml" />
     <Content Include="Views\Admins\CreateRoles.cshtml" />
     <Content Include="Views\Admins\CreateAdmin.cshtml" />
+    <Content Include="Views\Students\StudentsList.cshtml" />
+    <Content Include="Views\Students\ActivateAccounts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
