--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -296,7 +296,8 @@
     <Content Include="Views\Admins\CreateAdmin.cshtml" />
     <Content Include="Views\Students\StudentsList.cshtml" />
     <Content Include="Views\Students\List.cshtml" />
-    <Content Include="Views\Students\Test.cshtml" />
+    <Content Include="Views\Students\UpdateStudentData.cshtml" />
+    <Content Include="Views\Students\CraeteStudentData.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
