--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -298,6 +298,7 @@
     <Content Include="Views\Students\List.cshtml" />
     <Content Include="Views\Students\UpdateStudentData.cshtml" />
     <Content Include="Views\Students\CraeteStudentData.cshtml" />
+    <Content Include="Views\Students\DeleteStudent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
