--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -197,6 +197,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminsController.cs" />
+    <Compile Include="Controllers\AttendanceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\InstructorsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -204,9 +205,9 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201704151551200_h1.cs" />
-    <Compile Include="Migrations\201704151551200_h1.Designer.cs">
-      <DependentUpon>201704151551200_h1.cs</DependentUpon>
+    <Compile Include="Migrations\201704231905208_h1.cs" />
+    <Compile Include="Migrations\201704231905208_h1.Designer.cs">
+      <DependentUpon>201704231905208_h1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Attendance.cs" />
@@ -299,6 +300,8 @@
     <Content Include="Views\Students\UpdateStudentData.cshtml" />
     <Content Include="Views\Students\CraeteStudentData.cshtml" />
     <Content Include="Views\Students\DeleteStudent.cshtml" />
+    <Content Include="Views\Attendance\AttendanceReception.cshtml" />
+    <Content Include="Views\Attendance\attList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -312,8 +315,8 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201704151551200_h1.resx">
-      <DependentUpon>201704151551200_h1.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201704231905208_h1.resx">
+      <DependentUpon>201704231905208_h1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
