Initial Student Rating functions

--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/AdminstrationSysytem-v1.csproj
@@ -252,6 +252,7 @@
     <Content Include="Content\bootstrap-datepicker3.standalone.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Star-Style.css" />
     <Content Include="Content\themes\base\accordion.css" />
     <Content Include="Content\themes\base\all.css" />
     <Content Include="Content\themes\base\autocomplete.css" />
@@ -393,6 +394,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\Star-Dierctive.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
