--- a/AdminstrationSysytem-v1/AdminstrationSysytem-v1/packages.config
+++ b/AdminstrationSysytem-v1/AdminstrationSysytem-v1/packages.config
@@ -6,6 +6,7 @@
   <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
   <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net452" />
   <package id="jQuery" version="1.12.4" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.12.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
@@ -42,5 +43,6 @@
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="Quartz" version="2.5.0" targetFramework="net452" />
   <package id="Respond" version="1.2.0" targetFramework="net452" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
